-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0, 5.12.1
-
-
90c683e41cd978b55de57cb424a986db3b637fcc (qt/qtbase/5.12)
Setting color of text on focus of QTextEdit is not working when set by style sheet.
QTextEdit:focus { color: red; } // This doesn't work
QTextEdit { color: red; } // works
QTextEdit:focus{ background-color: red; } //works
Sample code attached.