src/widgets/widgets/qwidgettextcontrol.cpp
@@ -64,6 +64,9 @@
 #include "private/qtextdocument_p.h"
 #include "qtextlist.h"
 #include "private/qwidgettextcontrol_p.h"
+#if QT_CONFIG(style_stylesheet)
+#  include "private/qstylesheetstyle_p.h"
+#endif
 #if QT_CONFIG(graphicsview)
 #include "qgraphicssceneevent.h"
 #endif
@@ -3187,6 +3190,15 @@ QAbstractTextDocumentLayout::PaintContext QWidgetTextControl::getPaintContext(QW
 
     ctx.selections = d->extraSelections;
     ctx.palette = d->palette;
+#if QT_CONFIG(style_stylesheet)
+    if (widget) {
+        if (auto cssStyle = qt_styleSheet(widget->style())) {
+            QStyleOption option;
+            option.initFrom(widget);
+            cssStyle->styleSheetPalette(widget, &option, &ctx.palette);
+        }
+    }
+#endif // style_stylesheet
     if (d->cursorOn && d->isEnabled) {
         if (d->hideCursor)
             ctx.cursorPosition = -1;
